...
    <android.support.v7.widget.CardView
        android:id="@+id/recipeIngredientsCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:elevation="@dimen/cardview_default_elevation"
        app:layout_constraintBottom_toTopOf="@id/recipeStepsList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/ingredientLayout"
            android:paddingBottom="8dp"
...
